<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Let\'s Talk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <drawable name="green">#9cb426</drawable>
    <drawable name="bckg">#000000</drawable>

    <string name="app_logo_top">Let\'s Talk</string>
    <string name="help">Help Screen</string>
    <string name="menu">Main Menu Screen</string>
    <string name="settings">Settings Screen</string>
    <string name="game">Game Screen</string>
    <string name="scores">Scores Screen</string>
    <string name="app_logo_bottom">      Diminishing the Distance</string>
    <string name="app_version_info">Version 1.0.0\n © 2013 NucleusMinds Pvt Ltd.\nAll Rights Reserved.</string>
    <string name="title_activity_login">----</string>
    <string name="User">Username:</string>
    <string name="Password">Password:</string>
    <string name="dispHint" />
    <string name="forgetpass">forget password ?</string>
    <string name="newusr">New on Let\'s Talk then Sign Up here.. </string>
    <string name="title_activity_signup">Signup</string>
    <string name="re_Password">Re-Password:</string>
    <string name="phone_no">Phone no:</string>
    <string name="title_activity_chatroom">Chatroom</string>
    <string name="title_activity_chat_room">ChatRoom</string>

</resources>
