<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    android:orientation="vertical" >

     

    
    
    <TextView
    	android:layout_width="wrap_content"
       	android:layout_height="30dp"  />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
         android:stretchColumns="*"  >
    
      <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >
     
          <TextView
              android:id="@+id/Text01"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="70dp"
              android:layout_marginStart="40dp"
              android:text="@string/User"
              android:textSize="@dimen/size" />

          <EditText
              android:id="@+id/Edit01"
              android:layout_width=" 110dp"
              android:layout_height="wrap_content"
              android:hint="@string/dispHint"
              android:inputType="text" >

              <requestFocus />
          </EditText>
    
      </TableRow>
   
      <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >
        
        <TextView
          android:layout_marginStart="40dp"
           android:id="@+id/Text02"
           android:textSize="@dimen/size"
           android:text="@string/Password" />
        <EditText
          android:layout_width="wrap_content"
          android:id="@+id/Edit02"
          android:hint="@string/dispHint" 
          android:inputType="textPassword"/>
    
      </TableRow>
      
      <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >
        
        <TextView
          android:layout_marginStart="40dp"
           android:id="@+id/Text03"
           android:textSize="@dimen/size"
           android:text="@string/re_Password" />
        <EditText
          android:layout_width="wrap_content"
          android:id="@+id/Edit03"
          android:hint="@string/dispHint"
          android:inputType="textPassword" />
    
      </TableRow>
      
      <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >
        
        <TextView
          android:layout_marginStart="40dp"
           android:id="@+id/Text04"
           android:textSize="@dimen/size"
           android:text="@string/phone_no" />
        <EditText
          android:layout_width="wrap_content"
          android:id="@+id/Edit04"
          android:hint="@string/dispHint"
          android:inputType="phone" />
    
      </TableRow>
      
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
      
       <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
           android:gravity="center" >
     
          <Button
              android:id="@+id/button1"
              style="@style/button_text"
              android:background="@drawable/blue_button"
              android:text="Submit"
              android:onClick="Submit"  />
      </TableRow>
    
  </TableLayout>

    
</LinearLayout>